# Libsklog

./: .gitignore  COPYING  COPYING.LESSER  Makefile.am  README  TODO  USERGUIDE  configure.ac
apps/: Makefile.am  tnode.c  unode.c  vnode.c
docs/: Makefile.am
docs/certs/: Makefile.am
docs/certs/ca/: ca_cert.pem  ca_key.pem
docs/certs/u1/: u1_key.pem
docs/certs/v/: v_cert.csr  v_cert.pem  v_key.pem
docs/config/: Makefile.am  libsklog-t.conf.example  libsklog-u.conf.example
docs/rsyslog.d/: Makefile.am  libsklog-s.conf  libsklog-u.conf  libsklog.conf
docs/sphinx/: conf.py  index.rst
docs/sphinx/_build/doctrees/: api.doctree  configuration.doctree  environment.pickle  index.doctree  installation.doctree  tutorial.doctree
docs/sphinx/_build/doctrees/_doc/: api.doctree  configuration.doctree  installation.doctree  python_binding.doctree  tutorial.doctree  u.doctree
docs/sphinx/_build/html/: .buildinfo  api.html  configuration.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
docs/sphinx/_build/html/_doc/: api.html  configuration.html  installation.html  python_binding.html  tutorial.html  u.html
docs/sphinx/_build/html/_sources/: api.txt  index.txt  installation.txt  tutorial.txt
docs/sphinx/_build/html/_sources/_doc/: api.txt  installation.txt  python_binding.txt
docs/sphinx/_build/html/_static/: basic.css  default.css  foo.txt
docs/sphinx/_build/latex/: Libsklog.aux  Libsklog.ilg  Libsklog.out  Libsklog.tex  Libsklog.toc
docs/sphinx/_doc/: api.rst  configuration.rst  installation.rst  tutorial.rst
docs/sql/: Makefile.am  t_database.sql  u.db  u_database.sql
docs/user_guide/: user_guide.tex
example/: Makefile.am  sk.c
include/: Makefile.am  sklog.h  sklog_commons.h  sklog_define.h  sklog_err.h  sklog_internal.h  sklog_t.h  sklog_t_internal.h  sklog_u.h  sklog_u_internal.h  sklog_utils.h  sklog_v.h
lib/: Makefile.am  sklog.c  sklog.h  sklog_commons.c  sklog_commons.h  sklog_define.h  sklog_err.c  sklog_err.h  sklog_internal.c  sklog_internal.h  sklog_t.c  sklog_t.h  sklog_t_internal.c  sklog_t_internal.h  sklog_u.c  sklog_u.h  sklog_u_internal.c  sklog_u_internal.h  sklog_utils.c  sklog_utils.h  sklog_v.c  sklog_v.h  tpa_config.h  tpm.conf
lib/bindings/: Makefile.am
lib/bindings/python/: RESTserver.py  pylibsklog.c  pysklog.py  singleton.py  sklog_internal.h  sklog_t.h  sklog_u.h  unode.py
lib/bindings/python/apps/: RESTclient.py  RESTserver.py  pysklog.py
lib/certs/u1/: u1_cert.pem
lib/conf/: libsklog-t.conf.example
lib/libumberlog/lib/: libumberlog.la  libumberlog.so.1  libumberlog.so.1.1.0
lib/libumberlog/lib/pkgconfig/: libumberlog.pc
lib/libumberlog/share/man/man3/: umberlog.3
lib/storage/: sklog_dummy.c  sklog_dummy.h  sklog_file.c  sklog_file.h  sklog_misc.c  sklog_misc.h  sklog_sqlite.c  sklog_sqlite.h  sklog_syslog.c  sklog_syslog.h
tests/: Makefile.am  run_tests.c  sklog_tests.h  u_tests.c  v_tests.c
tests/CUnit/: Makefile.am  cunit2junit.sh  sklog_tests.c  sklog_tests.h  t_tests.c  u_tests.c
tests/CUnit/CUnit/lib/: libcunit.so.1.0.1
tests/CUnit/CUnit/lib/pkgconfig/: cunit.pc
tests/CUnit/reports/: CUnit-List.dtd  CUnit-List.xsl  CUnit-Run.dtd  CUnit-Run.xsl  Memory-Dump.dtd  Memory-Dump.xsl
tests/cmockery/: Makefile.am  t_tests.c
tests/cmockery/lib/: libcmockery.so.0.0.0
